Begin styling improvements

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,33 +1,24 @@
-.App {
+header {
+  flex: none;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#preview-area {
+  flex: 1 1 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row nowrap;
+  overflow: hidden;
+  width: 100%;
+  
+  #editor,
+  #preview {
+    flex: 1 0 50%;
+    display: inline-block;
+    overflow-y: auto;
+    justify-content: stretch;
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  flex: none;
 }
