--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,23 +2,31 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
+  margin: 0;
+  padding: 1em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
+p > code {
+  display: inline-block;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+  background-color: #eee;
+  display: block;
 }
 
 #root {
   display: flex;
   flex-flow: column nowrap;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   margin: 0;
 }
